--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
     <body>
         <h1>THis is a Header</h1>
         <p>This is a paragraph</p>
+        <p>THis is another paragraph</p>
     </body>
 </html>
